--- a/index.html
+++ b/index.html
@@ -2,31 +2,20 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+
 </head>
 <body>
-	<form >
-		<h1>Vertical Menu</h1>
+		
      <nav>
+        <h1>Vertical Menu</h1>
        <ul >
-            <li class="list"><a href="" target="_blank">Inicio</a></li>
-            <li class="list"><a href="">Sobre mí</a></li>
-            <li class="list"><a href="">Portafolio</a></li>
-            <li class="list"><a href="">Contacto</a></li>
-            <li class="list"><a href="">Noticias</a></li>
+            <li><a href="http://laboratoria.la" target="_blank">Inicio</a></li>
+            <li><a href="">Sobre mí</a></li>
+            <li><a href="">Portafolio</a></li>
+            <li><a href="">Contacto</a></li>
+            <li><a href="">Noticias</a></li>
         </ul> 
      </nav> 
-	 </form>
-	 <form >
-		<h1>Vertical Menu</h1>
-      <ul >
-          <li class="listv">Inicio</li>
-          <li class="listv">Sobre mi</li>
-          <li class="listv">Portafolio</li>
-          <li class="listv">Noticias</li>
-      </ul> 
-	 </form>
-
-
-
-</body>
+     <script type="text/javascript" src="js/app.js"></script>
+	</body>
 </html>
